--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "blogue-client",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "/js/index.js",
   "scripts": {
     "test": "jest",
     "coverage": "jest --coverage",
