--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "concurrently": "^6.0.0",
     "jest": "^26.6.3",
+    "jest-fetch-mock": "^3.0.3",
     "watchify": "^4.0.0"
   }
 }
